set data index for loop to correspond with daily data returned by fetch call

--- a/index.html
+++ b/index.html
@@ -17,45 +17,47 @@
           <h1 id="ponder">Ponder The Globe</h1>
           <label>Search</label>
           <input id="searchInput" type="text" placeholder="location" />
-          <button id="submitButton" type="submit" value="Submit">Submit</button>
+          <button id="submitButton" type="button" value="Submit">Submit</button>
         </section>
         <section class="weatherToday">
           <h1 class="currentLocation" type="text">Holder</h1>
           <div class="today">
-            <div id="temp" type="text">Temperature:</div>
-            <div id="wind" type="text">Wind:</div>
-            <div id="humidity" type="text">Humidity:</div>
+            <div id="temp1" type="text">Temperature:</div>
+            <div id="wind1" type="text">Wind:</div>
+            <div id="humidity1" type="text">Humidity:</div>
           </div>
         </section>
       </section>
         <section class="forecast">
+          <div class="day" data-index="0">
+            <div class="temp" type="text">Temperature:</div>
+            <div class="wind" type="text">Wind:</div>
+            <div class="humidity" type="text">Humidity:</div>
+          </div>
           <div class="day" data-index="1">
-            <div id="temp" type="text">Temperature:</div>
-            <div id="wind" type="text">Wind:</div>
-            <div id="humidity" type="text">Humidity:</div>
+            <div class="temp" type="text">Temperature:</div>
+            <div class="wind" type="text">Wind:</div>
+            <div class="humidity" type="text">Humidity:</div>
           </div>
           <div class="day" data-index="2">
-            <div id="temp" type="text">Temperature:</div>
-            <div id="wind" type="text">Wind:</div>
-            <div id="humidity" type="text">Humidity:</div>
+            <div class="temp" type="text">Temperature:</div>
+            <div class="wind" type="text">Wind:</div>
+            <div class="humidity" type="text">Humidity:</div>
           </div>
           <div class="day" data-index="3">
-            <div id="temp" type="text">Temperature:</div>
-            <div id="wind" type="text">Wind:</div>
-            <div id="humidity" type="text">Humidity:</div>
+            <div class="temp" type="text">Temperature:</div>
+            <div class="wind" type="text">Wind:</div>
+            <div class="humidity" type="text">Humidity:</div>
           </div>
           <div class="day" data-index="4">
-            <div id="temp" type="text">Temperature:</div>
-            <div id="wind" type="text">Wind:</div>
-            <div id="humidity" type="text">Humidity:</div>
-          </div>
-          <div class="day" data-index="5">
-            <div id="temp" type="text">Temperature:</div>
-            <div id="wind" type="text">Wind:</div>
-            <div id="humidity" type="text">Humidity:</div>
+            <div class="temp" type="text">Temperature:</div>
+            <div class="wind" type="text">Wind:</div>
+            <div class="humidity" type="text">Humidity:</div>
           </div>
         </section>
       </section>
     </main>
   </body>
+  <script src="./script.js"></script>
+  <script src="./apitoken.js"></script>
 </html>
