Synced up current day weather info with forecast info on script.js

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         </section>
         <section class="weatherToday">
           <h1 class="currentLocation" type="text">Holder</h1>
-          <div class="today">
-            <div id="temp1" type="text">Temperature:</div>
-            <div id="wind1" type="text">Wind:</div>
-            <div id="humidity1" type="text">Humidity:</div>
+          <div class="today" data-today>
+            <div class="temp" type="text">Temperature:</div>
+            <div class="wind" type="text">Wind:</div>
+            <div class="humidity" type="text">Humidity:</div>
           </div>
         </section>
       </section>
