setting search history as list below search bar

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
           <label>Search</label>
           <input id="searchInput" type="text" placeholder="location" />
           <button id="submitButton" type="button" value="Submit">Submit</button>
+          <ul id="searchHistory">
+
+          </ul>
         </section>
         <section class="weatherToday">
           <h1 class="currentLocation" type="text">Holder</h1>
